--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,43 @@ perspective-workspace {
     bottom: 0; 
 }
 
+#buttons > * {
+    padding: 6px;
+    margin: 5px;
+}
+
+button {
+    background-color: inherit;
+    border: 1px solid rgba(0,0,0,0.5);
+}
+
 body {
     overflow: hidden;
+}
+
+#message {
+    font-family: monospace;
+}
+
+#buttons {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 36px;
+    background-color: #F2F4F6;
+}
+
+#workspace {
+    height: auto;
+    position: absolute;
+    top: 36px;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+a {
+    text-transform: uppercase;
+    font-size: 10px;
 }
